app/assets/css/sass/_follow-up.scss
ul#chat-UI {
	margin-bottom: 30px;
}

.rthd-ticket-content .rthd-discussion.rthd-discussion {
	list-style: none;
	margin: 0;
	padding: 0;
}

.rthd-discussion.rthd-discussion > li {
	padding: 25px 0;
	margin: 0;
	overflow: hidden;
	display: flex;
	position: relative;
}

.rthd-discussion > li:before {
	background: none repeat scroll 0 0 #eee;
	content: " ";
	height: 100%;
	left: 21px;
	position: absolute;
	top: 0;
	width: 2px;
}

#chat-UI.rthd-discussion > li:last-child:before {
	height: 45px;
}

#ticket-content-UI.rthd-discussion > li:before {
	top: 30px;
}

.rthd-discussion div.avatar {
	min-width: 40px;
	position: relative;
	margin-right: 12px;
}

.rthd-discussion .avatar img {
	border-radius: 100%;
	display: block;
	height: auto;
	max-width: 100%;
}

.rthd-self .avatar:after, .rthd-other .avatar:after, .rthd-self .avatar:before, .rthd-other .avatar:before {
	left: 94%;
	top: 22px;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
}

.rthd-self .avatar:after, .rthd-other .avatar:after {
	border-color: rgba(250, 250, 250, 0);
	border-width: 9px;
	margin-top: -9px;
	border-right-color: rgb(246, 247, 248);
}
.rthd-self .avatar:before, .rthd-other .avatar:before {
	border-color: rgba(238, 238, 238, 0);
	border-right-color: #eeeeee;
	border-width: 8px;
	margin-top: -8px;
}
.private-comment-item.rthd-self .avatar:after, .private-comment-item.rthd-other .avatar:after {
	border-right-color: #FFC0CB;
}

.rthd-self .rthd-messages, .rthd-other .rthd-messages, .rt-hd-ticket-front-title{
	-ms-word-break:break-all;
	word-wrap: break-word;
	word-break: break-word;
	-webkit-hyphens:auto;
	-moz-hyphens:auto;
	hyphens:auto;
}
.rthd-self .avatar {
	position: relative;
}

.rthd-messages {
	border: solid 1px #eee;
	background: rgb(246, 247, 248);
	padding: 10px;
	border-radius: 2px;
	width: 100%;

	pre {
		white-space: pre-wrap;
		word-wrap: break-word;
	}
}

.rthd-messages p {
	margin: 0 0 1.5rem;
}

.rthd-messages time {
	color: #777;
    float: right;
}

.rthd-messages .comment_attechment {
	display: block;
	padding: 0;
	margin: 10px 0 5px;
	font-size: 12px;
}

.rthd-messages .comment_attechment li {
	display: inline-block;
	list-style: none;
	margin-right: 5px;
}

#private-comment{
	display: inline-block;
}

.rthd-visibility-wrap {
	margin-bottom: 16px;

	label {
		margin-right: 10px;
	}
}

.rthd-keep-status-wrap {
	margin-bottom: 16px;
}

.rthd-info-meta-created-by-li {
	.avatar {
		float: left;
		margin-right: 10px;
	}

	.rthd-info-meta-created-by {
		line-height: 25px;
		text-decoration: none;
	}
}

#rthd-followup-form {
	margin-top: 16px;
}

#rthd-followup-form > div {
	margin-bottom: 16px;
}

.add-followup-attachment {
	float: right;
	margin-right: 10px;
}

#attachment-files .rthd_delete_attachment {
	color: red;
	float: right;
	margin-left: 10px;
}

.private-comment-display{
	/*color: red;*/
	background: pink;
}

.followup-content {
	width:100%;
	padding: 0;
	height: 200px;
}
.followup-hash-url{
	text-decoration: none;
	color: inherit;
}

.helpdeskspinner{
	display:none;
}

#editedfollowupcontent, #editedticketcontent{
	width:100%;
}

.red-color{
	color: #d02600;
}

.edit-action-button button[type='button']{
	float: right;
}

#editfollowup{
	margin-right: 5px;
}

.rthd-ticket-content {
	font-size: 14px;
	float: left;
	width: 72%;
}

.rthd-container {
	//margin: 10px;
	/*overflow: auto;*/
}

.rthd-ticket-description {
	-ms-word-break:break-all;
	word-wrap: break-word;
	word-break: break-word;
	-webkit-hyphens:auto;
	-moz-hyphens:auto;
	hyphens:auto;
}

.rthd-clearfix {
	clear: both;
}
.editfollowuplink ,.edit-ticket-link, .show-original-email{
	color : #777;
}

.load-more{
	position: relative;
	border: 1px solid #f5f5f5;
}
.load-more:after, .load-more:before {
	right: 100%;
    top: 25px;
    border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
}

.load-more:after {
	border-color: rgba(9, 59, 115, 0);
	border-right-color: #06C;
	border-width: 9px;
	margin-top: -7px;
}
.load-more:before {
	border-color: rgba(245, 245, 245, 0);
	border-right-color: #f5f5f5;
	border-width: 8px;
	margin-top: -8px;
}

#followup-load-more{
	display: inline-block;
	padding: 10px 20px;
	left: 39px;
}

.rthdcenter{
	text-align: center;
	width: 100%;
}
.rthd-discussion.rthd-discussion>li.load-more-spinner-li {
	padding: 0;
	display: none;
}

.load-more-ul li a.load-more-block {
    border-radius: 50%;
    text-align: center;
    z-index: 1;
    height: 44px;
    padding: 5px;
	margin: 0;
}

.wp-admin .load-more-ul li a p {
	padding: 0;
}

.load-more-ul a p label {
	margin: 0;
}
.load-more-ul a:hover{
    cursor: pointer;
}

.load-more-ul li a {
    text-decoration: none;
	background: #06C;
	color: #fff;
	font-size: 20px;
}

.followup-information{
    margin-bottom: 10px;
}

.followup-information span,.followup-information span a{
    color: #06C;
}

.load-more-count {
    font-size: 10px;
    position: relative;
    top: -2px;
}

.load-more-block {
    height: 42px;
    line-height: 1;
    position: relative;
    width: 42px;
    z-index: 10;
}

#followup-load-more {
    display: inline-block;
    left: 20px;
    padding: 10px 20px;
	margin-right: 20px;
}

#followup-load-more-count{
    display: block;
}

.ticketcontent{
    border: 1px solid #BBB;
}

.ticketother .avatar:before {
    border-right-color: #bbb;
}

#followup-load-more:hover {
    background: #039;
}

#followup-load-more:hover:after {
    border-right-color: #039;
}

.load-more-ul li a:hover {
    background: #039;
}
.followup-information .private_comment_span{
	color: #C85D5D;
}

.rt_original_email{
	word-wrap: break-word;
}

.rt-hd-sidebar-box {
	margin: 20px 0 40px;

	&.rt-hd-sidebar-box ul {
		list-style: none;
		margin: 0;
		padding: 0;

		li {
			margin-left: 0;
		}
	}
}

.rt-hd-ticket-info {
	border-bottom: 1px dotted #ddd;
	padding: 0 0 10px;
}

.rt-hd-related-ticket ul li, .rt-hd-ticket-history ul li{
	padding: 5px;
	margin: 5px 0px;
}

.rt-hd-related-ticket ul li mark, .rt-hd-ticket-history ul li mark{
	float: right;
}
.followup-note {
	font-size: 13px;
	color: grey;
}
#rthd-ticket-edit{
	float: right;
	padding: 5px;
}

#rthd-change-status{
	padding: 5px;
}

#rthd-status-visiable{
	display: inline-block;
}

.rthd_order_status{
	display: inline;
	float: right;
}

.wp-editor-container {
	background: #fff;
	border: 1px solid #e5e5e5;
	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.04);
	box-shadow: 0 1px 1px rgba(0,0,0,0.04);
}
.edit-action-button {
	float: right;
}
#clear-attachemntlist {
	display: none;
	text-decoration: none;
}
.rthd-scroll-up {
	z-index: 1;
	position: fixed;
	bottom: 100px;
	right: 50px;
	width: 50px;
	height: 50px;
	&:hover{
		text-decoration: none;
	}
}
.rthd-followup-type-tolltip{
	vertical-align: middle;
}

.rthd-scroll-up label{
	display: block;
	margin-left: 7px;
}
.rthd-scroll-up .dashicons{
	font-weight: bold;
	font-size: 2em;
}

h2.rt-hd-ticket-front-title{
	margin-top: 0;
	display: inline;
}

.MultiFile-remove{
	color: #9B0000;
}

#rthd-subscribe-email{
    word-break: initial;
}

.rthd-followup-file-uploaded{
	color: #71dd7f;
}

.followup-attach-remove.followup-attach-remove {
	border: 0;
	color: inherit;
	text-decoration: none;
}

#followup-filelist {
	margin: 16px 0;
}

.blacklist_contacts_list {
	list-style: none;
	margin: 0 0 16px;
	padding: 0;
}

.rthd-front-icons:after,.rthd-ticket-user-activity:after{
	clear: both;
}

.rt-hd-front-icons span{
	margin-left: 5px;
}

.rthd-ticket-user-activity a img, .rthd-ticket-user-activity a input{
	border-radius: 100%;
	vertical-align: middle;
}

.rthd-ticket-user-activity > a {
	display: inline-block;
	margin: 5px 8px 5px 0;
	text-decoration: none;
}

.rthd-contact-avatar-no-reply-div a img,.rthd-subscriber-avatar-no-reply-div a img{
	opacity: 0.65;
}
.rthd-contact-avatar-no-reply,.rthd-contact-avatar-no-reply-div, .rthd-subscriber-avatar-no-reply{
	display: inline;
}
.rthd-contact-avatar-no-reply-div,.rthd-subscriber-avatar-no-reply-div{
	/*margin-left: 3px;*/
	display: inline;
	margin: 0;
	padding: 0;
}

.rt-hd-ticket-sub-row {
	margin: 10px 0 15px;

	.attachment-item img {
		display: inline-block;
	}
}

.rthd-ticket-dropdown{
	background: transparent;
}

.rthd-add-people-button{
	position: relative;
	float: right;

	& > a {
		display: inline-block;
		margin-top: 2px;
	}
}

.rthd-add-people-button.rthd-show-add-people-box{
	display: block;
}

.rthd-add-people-box {
	background: #f0f0f0;
	display: none;
	padding: 10px;
	position: absolute;
	right: 0;
    width: 225px;
	z-index: 999;
}

.rthd-add-people-button a:hover {
	display: block;
}

.rthd-collapse-icon a span {
	background: #E5E5E5;
	border-radius: 10%;
}


.rthd-front-icons {
	padding-top: 10px;

	a {
		margin: 0 6px;
	}

	.dashicons {

	}
}

.rthd-front-icons a:hover,.rthd-collapse-click:hover{
	text-decoration:none;
}

.rthd-front-icons a,.rthd-collapse-click{
	text-decoration:none;
}

ul#attachment-files {
	list-style-type: none;
	padding: 0;
	margin: 0;

	li {
		margin-left: 0; // 2012
	}
}

#rthd-offering-list{
	width: 100%;
}

.rthd-ticket-list{
	margin: 10px 0;
}

h2.rthd-ticket-list-title{
	margin-top: 20px;
}

.rthd-collapse-icon {
    float: right;
}

.followup_staffonly{
	background: beige;
}

.rthd-self .followup_staff_only_arrow:after, .rthd-other .followup_staff_only_arrow:after{
	border-right-color: beige;
}

.load-more-ul {

}

img#hdspinner{
	border-radius: 0;
	box-shadow: none;
	vertical-align: middle;
}

.rthd-attachment-box {
	float: left;
}

.rthd-followup-action {
	float: right;
}

.rthd-visibility-wrap input[type="radio"]{
	display: inline;
	min-height: 0;
	margin-top: 0;
}

